fixed href for contact info.

--- a/templates/about.html
+++ b/templates/about.html
@@ -56,7 +56,7 @@
 
 	<!-- about me/ bio -->
 	<h3>
-	<a href="www.linkedin.com/in/www.linkedin.com/in/kborges">Connect with the developer</a>
+	<a href="http://www.linkedin.com/in/kborges">Connect with the developer</a>
 	</h3>
 
 
