Clean up templates.

--- a/templates/about.html
+++ b/templates/about.html
@@ -25,43 +25,25 @@
 	</h2>
 
 	<p>
-	Ocean Rider’s Journal is a place for Northern and Central California surfers to record their time in the ocean. The journal collects swell and wind data based on time and location, and combines it with subjective user ratings to visually graph the best conditions for the user. develop a keener sense of what conditions work best for them at their favorite spots.
+	Ocean Rider’s Journal is a place for Northern and Central California surfers to record their time in the ocean. The journal collects swell and wind data based on time and location, and combines it with subjective user ratings to visually graph the best conditions for the user to develop a keener sense of what conditions work best for them at their favorite spots.
 	</p>
 
 
-	<!-- about hackbright/ the project/ technology used -->
 	<h4>About the Ocean Riders' Journal</h4>
-	<p>
-	This webapp uses a Python controller and a Flask web framework. The SQLite database collects information provided by users about their surf sessions, the boards they ride, and the wind and swell conditions at the time of each journal entry. Weather data is gathered from the magicseaweed.com API. 
-	</p>
-
-	<!-- thanks to mentors, advisor, teachers, TAs, friends and family -->
-	<p>
-	Ocean Rider’s Journal was made at Hackbright Academy as my final project for the Winter 2015 cohort. 
-	</p>
 
 	<p>
 	Ocean Rider’s Journal uses a Python controller and a Flask web framework. The SQLite database collects information provided by users about their surf sessions, the boards they ride, and the wind and swell conditions at the time of each journal entry. Weather data is gathered from the magicseaweed.com API. 
 	</p>
 
 	<p>
-	Many thanks to all the amazing Hackbright teachers and TAs (especially my advisor Katie LeFevre), and my very inspiring mentors.
-	I am also deeply indebted to my irreplaceable collection of friends and family, all of whom encouraged me to make the jump to Hackbright. 
-	</p>
-
-	<!-- credit to artists of images used? -->
-	<p>
 	Weather data is gathered from <a href="http://magicseaweed.com/developer/api">the magicseaweed API.</a> Thanks to <a href="http://www.juniorbill.com">Junior Bill</a> for lending me his classic surboard artwork for the quiver icons.
 	</p>
 
-	<!-- about me/ bio -->
 	<h3>
 	<a href="http://www.linkedin.com/in/kborges">Connect with the developer</a>
 	</h3>
 
 
-</div> <!-- closes content container -->
-
-
+</div>
 
 {% endblock %}
