--- a/templates/board_quiver.html
+++ b/templates/board_quiver.html
@@ -60,23 +60,23 @@
             </tbody>
         </table>
 
-    </div> <!-- closes quiver table -->
-</div> <!-- closes content container: quiver table -->
+    </div> 
+</div> 
 
 <div class="content-container">
     <form class="form" action="/addBoardToDB" method="post">
 
-        <div class="row"> <!-- top row -->
+        <div class="row"> 
 
                 <span class="title-center">
                     <h3>Add a Board to your Quiver:</h3>
                 </span>
 
-        </div> <!-- closes top row -->
+        </div> 
 
-        <div class="row"> <!-- bot row -->
+        <div class="row"> 
 
-                <div class="col-md-4 col-xs-12"> <!-- left col -->
+                <div class="col-md-4 col-xs-12"> 
 
                     <div class = "form-group">
                         <label for="board-nickname">Board's nickname:</label>
@@ -100,18 +100,10 @@
                         <input type="text" class="form-control" id = "board-length_in" name = "length_in" maxlength="2" size="2"  placeholder="#">
                     </div>
 
-<!--                     <div class = "form-group">            
-                    <h5>Length:</h5>
-                        <label for="board-length_ft">feet</label>
-                        <input type="text" class="form-control" id = "board-length_ft" name = "length_ft" maxlength="2" size="2" placeholder="#"> 
-                        <label for="board-length_in">in.</label>
-                        <input type="text" class="form-control" id = "board-length_in" name = "length_in" maxlength="2" size="2"  placeholder="#">
-                    </div> -->
-
-                </div> <!-- closes left col -->
+                </div> 
 
 
-                <div class="col-md-4 col-xs-12"> <!-- mid col -->
+                <div class="col-md-4 col-xs-12"> 
 
                     <div class = "form-group">
                         <label for="shaper">Shaper:</label>
@@ -123,9 +115,9 @@
                         <input type="text" class="form-control" id = "fins" maxlength="30" size="30" placeholder="(2+1, singlefin..?)">      
                     </div>
 
-                </div> <!-- closes mid col -->
+                </div> 
 
-                <div class="col-md-4 col-xs-12"> <!-- right col -->
+                <div class="col-md-4 col-xs-12"> 
 
 
                     <div class = "form-group">
@@ -138,13 +130,13 @@
                     </div>
 
 
-                </div> <!-- closes right col -->
+                </div> 
 
-        </div> <!-- closes bot row -->
+        </div> 
 
 
     </form>
 
-</div> <!-- closes content container: quiver form -->
+</div> 
 
 {% endblock %}
