--- a/templates/surf_entries_summary.html
+++ b/templates/surf_entries_summary.html
@@ -10,8 +10,7 @@
             -o-background-size: cover;
             background-size: cover;
             background-position: bottom; 
-/*            background-position-y: 15%;
-*/        }
+        }
 
     </style>
     {% endblock %}
@@ -58,11 +57,12 @@
             </tbody>
 
         </table>
-    </div> <!-- closes summary table -->
+    </div> 
 
-</div> <!-- closes content container -->
 
-<!-- credit to the API -->
+</div> 
+
+
 <div class = "msw">
     <a href="http://magicseaweed.com"><img src="http://im-1-uk.msw.ms/msw_powered_by.png"></a>
     <br>
@@ -72,10 +72,6 @@
 <script type="text/javascript">
 
 $(function () {
-
-    // Highcharts.setOptions({
-    //     colors: ['#058DC7', '#50B432', '#ED561B', '#DDDF00', '#24CBE5', '#64E572', '#FF9655', '#FFF263', '#6AF9C4']
-    // });
 
     Highcharts.setOptions({
         colors: ['#38B4BE', '#3238CB', '#3482D5', '#34D595', '#3CCB4E', '#54BE33', '#B6D52E', '#CBBE5B', '#F9E96C']
