--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
                     
                     <div class="navbar-header">
                         <img src="/static/img/oceanrider_logo.png"><a class="navbar-brand" href="/">Ocean Riders' Journal</a>
-                    </div> <!--  closes nav upper left -->
+                    </div>
 
                     <div class="navbar-collapse collapse" >
                         <ul class="nav navbar-nav navbar-right">
@@ -28,14 +28,14 @@
                             <li><a href="/login">Log In/ Register</a></li>
                             <li><a href="/logout">Log Out</a></li>
                         </ul>
-                    </div> <!--  closes nav upper right -->
+                    </div>
 
-                </div> <!--  closes nav upper container fluid -->
+                </div> 
 
                 <div class="container-fluid" id = "nav-lower">
 
                     <div class = "nav-lower-text">
-                        <!-- <p class="navbar-text"> -->
+                        
                         <a href="/entries">view existing entries</a> | 
                         <a href="/addEntryForm">create a new entry</a> | 
                         <a href="/board_quiver">view/ edit quiver</a> |
@@ -50,18 +50,18 @@
                                 {% endfor %}
                             {% endif %}
                         {% endwith %}
-                        <!-- </p> -->
-                    </div> <!--  closes nav lower text -->
+                        
+                    </div> 
 
-                </div> <!--  closes nav lower container fluid -->
+                </div> 
 
-            </nav> <!--  closes all nav -->
+            </nav> 
 
         <div class="container-fluid">
 
             {% block body %}{% endblock %}
 
-        </div> <!--  closes body block container fluid -->
+        </div> 
 
     </body>
 </html>
