--- a/templates/board_quiver.html
+++ b/templates/board_quiver.html
@@ -84,10 +84,10 @@
                     </div>
 
                     <div class = "form-group">
-                        <label for="category">Board Type:</label>
+                        <label for="board-category">Board Type:</label>
                         <select class="form-control" name = "category" required>  
                         {% for category in categories %}     
-                        <option value="category">{{category}}</option>
+                        <option value={{category}}>{{category}}</option>
                        {% endfor %}
                         </select>
                     </div>
